fix chat notification settings unintuitive
Problem: The layout is such that "unfollow mentioned" is not fully visible, so it gets truncated to "unfollow..." (https://github.com/online-go/online-go.com/issues/1971)

Result (Fixed): "Unfollow Mentioned" is visible now.

--- a/src/components/Chat/ChatDetails.styl
+++ b/src/components/Chat/ChatDetails.styl
@@ -32,7 +32,7 @@
         justify-content: space-between;
 
         > button {
-            min-width: 98%;
+            min-width: 100%;
             text-align: left;
             .fa, .ogs-goban {
                 padding-right: 0.1rem;
