--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -443,7 +443,7 @@ button, a.btn, .btn {
     padding-top: 0.1em;
     padding-bottom: 0.1em;
     border-radius: 0.3rem;
-    height: 2em;
+    height: fit-content;
     vertical-align: middle;
     box-sizing: border-box;
     line-height: font-size-normal;
